--- a/circuits/Hashproof_cpp/Makefile
+++ b/circuits/Hashproof_cpp/Makefile
@@ -3,12 +3,12 @@ CFLAGS=-O3 -I.
 DEPS_HPP = circom.hpp calcwit.hpp fr.hpp
 DEPS_O = main.o calcwit.o fr.o fr_asm.o
 
-all: Hashproof
+all: hashproof
 
 %.o: %.cpp $(DEPS_HPP)
 	$(CC) -c $< $(CFLAGS)
 fr_asm.o: fr.asm
 	nasm -felf64 fr.asm -o fr_asm.o
 
-Hashproof: $(DEPS_O) Hashproof.o
-	$(CC) -o Hashproof *.o -lgmp
+hashproof: $(DEPS_O) hashproof.o
+	$(CC) -o hashproof *.o -lgmp
